# cypher-poll

./: Cargo.toml  README.md  git-auth.py  register.sh  vote.sh
artifacts/: nullifier  snapshot
circuit/methods/voting-guest/: Cargo.toml
client/: Cargo.toml
client/src/: gpg.rs  identity.rs  lib.rs  main.rs  prover.rs  storage.rs  types.rs  verifier.rs
client/src/prover/: logic.rs  merkle.rs  zkvm.rs
crypto/: Cargo.toml
crypto/src/: gpg.rs  identity.rs  lib.rs
resources/test/: key.asc  key.sec.asc
risc0-circuit/: Cargo.toml
risc0-circuit/methods/: Cargo.toml
risc0-circuit/methods/voting-guest/: Cargo.toml
risc0-circuits/methods/: Cargo.toml
risc0-circuits/methods/voting/: Cargo.toml
risc0-circuits/methods/voting/src/: main.rs
risc0-prover/: Cargo.toml
risc0-prover/src/: prover.rs  verifier.rs
risc0-types/: Cargo.toml
risc0-types/src/: lib.rs
risc0-verifier/: Cargo.toml
risc0-verifier/src/: verifier.rs
scripts/: register.sh  vote.sh
service/: Cargo.toml
service/src/: constants.rs  gauth.rs  main.rs
voting-tree/: Cargo.toml  readme.md
voting-tree/src/: crypto.rs  lib.rs
zk-associated/: Cargo.toml  main.rs
zk-associated/src/: lib.rs  prover.rs  storage.rs
zk-associated/src/prover/: logic.rs
