[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
risc0-zkvm = { version = "0.21.0", default-features = false }
risc0-prover = {path="../risc0-prover"}
risc0-types = {path="../risc0-types"}
crypto = {path="../crypto"}
pgp = "0.13"
reqwest = "0.12.5"
tokio = {version="1.38", features=["full"]}
serde = {version="1", features=["derive"]}
voting-tree = {path="../voting-tree"}
