[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
risc0-zkvm = { version = "0.21.0", default-features = false }
risc0-prover = {path="../risc0-prover"}
risc0-types = {path="../risc0-types"}
crypto = {path="../crypto"}
pgp = "0.13"
reqwest = {version="0.12.5", features=["blocking", "json"]}
tokio = {version="1.38", features=["full"]}
serde = {version="1", features=["derive"]}
voting-tree = {path="../voting-tree"}
serde_json="1.0.1"
risc0-groth16 = { version = "0.21.0", optional=true }
[features]
groth16 = ["risc0-groth16"]