[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
zk-associated = {path="../zk-associated"}
crypto = {path="../crypto"}
voting-tree = {path="../voting-tree"}
risc0-zkvm = { version = "0.21.0", default-features = false }
risc0-prover = {path="../risc0-prover"}
risc0-types = {path="../risc0-types"}
pgp = "0.13"
reqwest = "0.12.5"
tokio = {version="1.38", features=["full"]}
serde_json = "1.0.1"
client = {path="../client"}
axum = "0.7.5"
[features]
groth16 = ["risc0-prover/groth16"]